--- a/net-il-mio-fotoalbum/net-il-mio-fotoalbum.csproj
+++ b/net-il-mio-fotoalbum/net-il-mio-fotoalbum.csproj
@@ -7,4 +7,16 @@
     <RootNamespace>net_il_mio_fotoalbum</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.16">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.16" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
